--- a/frontend/src/Styles/mixes.css
+++ b/frontend/src/Styles/mixes.css
@@ -6,14 +6,14 @@
 }
 
 /* THESE WILL HIDE SCROLLBAR */
-/* .cardsContainer::-webkit-scrollbar {
+.cardsContainer::-webkit-scrollbar {
   display: none;
 }
 
 .cardsContainer {
   -ms-overflow-style: none;  
   scrollbar-width: none;  
-} */
+}
 
 .mixesTransportContainer {
    position: fixed;
